# vodo

./: Cargo.toml  Makefile  README.md  query_packet.txt  response_packet.txt
.devcontainer/: devcontainer.json  post-create-command.sh
.github/workflows/: release.yml  rust.yml
src/: bpb.rs  buffer.rs  handler.rs  header.rs  main.rs  packet.rs  pb.rs  question.rs  rc.rs  record.rs  resultcode.rs
